Fixed issue with jumbotron not stretching across full width of viewport. Added text effect animation via CSS keyframe.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,18 @@ body {
 
 header {
   border: solid 1.75rem rgb(50, 50, 51);
-  width: 100%;
+  /* width: 100%; */
 }
 
 /* CLASS STYLES */
 .headerText {
+  animation: blinking 1s infinite;
   color: #ce1cc5;
   font-family: 'Kaushan Script', cursive;
   font-size: 80px;
   opacity: 100%;
-  padding: 1rem 2.5rem;
+  padding: 1rem 4rem;
   text-align: right;
-  text-shadow: 2px 2px rgb(54, 128, 148);
   -webkit-text-stroke-width: 1.75px;
   -webkit-text-stroke-color: #ffffff;
 }
@@ -24,6 +24,11 @@ header {
   background-image: url("../images/andi-kernel-ka-s-9_SV-LHxGBU-unsplash.jpg");
   background-position: center center;
   background-size: cover;
-  height: 300px;
-  width: 100%;
+  height: 275px;
+}
+
+/* KEYFRAMES */
+@keyframes blinking {
+  0% { text-shadow: 2px 2px aqua; }
+  100% { text-shadow: 2px 2px rgb(28, 133, 133); }
 }
